packages/runtime/src/core/__fixtures__/errors/imported/main.js
import { throwError } from '/error-module.js';
throwError();
export default 'should not reach here';
